[package]
name = "ratatui-json-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
itertools = "0.12.1"
ratatui = { version = "0.26.1", features = ["unstable-widget-ref"] }
rstest = "0.18.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }

[patch.crates-io]
ratatui = { path = "../ratatui" }
