[package]
name = "ratatui-json-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
itertools = "0.13.0"
ratatui = { version = "0.28.1", features = ["unstable-widget-ref"] }
rstest = "0.22.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
